--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/ros2launch
-	previous = 
-	base = 07c3e23
+	previous = 07c3e23
+	base = 479f732
 	trim = 
 	trimbase = 
