--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = vcpkg/dashing/ros2launch
-	previous = 
-	base = 520a142
+	previous = 520a142
+	base = 436460b
 	trim = 
 	trimbase = 
