--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/launch_ros
-	previous = 
-	base = fb6e150
+	previous = fb6e150
+	base = f9bdb60
 	trim = 
 	trimbase = 
