--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = vcpkg/dashing/launch_ros
-	previous = 
-	base = 94f65c8
+	previous = 94f65c8
+	base = edf2024
 	trim = 
 	trimbase = 
