--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/test_launch_ros
-	previous = 
-	base = 137974f
+	previous = 137974f
+	base = 7b48749
 	trim = 
 	trimbase = 
