--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = vcpkg/dashing/test_launch_ros
-	previous = 
-	base = d679684
+	previous = d679684
+	base = a09fbb9
 	trim = 
 	trimbase = 
