--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/launch_testing_ros
-	previous = 
-	base = 18c1e83
+	previous = 18c1e83
+	base = 2e9f3bd
 	trim = 
 	trimbase = 
