--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = vcpkg/dashing/launch_testing_ros
-	previous = 
-	base = 936ecf3
+	previous = 936ecf3
+	base = 2d054ce
 	trim = 
 	trimbase = 
